desafio/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desafio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: desafio
  template:
    metadata:
      labels:
        app: desafio
        desafio: jackexperts
    spec:
      containers:
      - name: nginx-container
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
      - name: html-volume
        configMap:
          name: desafio-html-configmap
          items:
          - key: index.html
            path: index.html
