desafio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desafio-service
  labels:
    desafio: jackexperts
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: desafio
